Project

General

Profile

Actions

Bug #9110

closed

double free or corruption error at_exit with callcc

Bug #9110: double free or corruption error at_exit with callcc

Added by Glass_saga (Masaki Matsushita) almost 13 years ago. Updated over 12 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.1.0dev (2013-11-14 trunk 43675) [x86_64-linux]
[ruby-core:58329]

Description

Following code causes double free or corruption error.

require "continuation"

c = nil
at_exit { c.call }
at_exit { callcc {|_c| c = _c } }


Files

patch.diff (1.25 KB) patch.diff defer xfree() of end_procs Glass_saga (Masaki Matsushita), 11/14/2013 01:12 PM
Actions

Also available in: PDF Atom