 * eval_jump.c (rb_exec_end_proc): fix double free or corruption error    when reentering by callcc. [ruby-core:58329] [Bug #9110]

* test/ruby/test_beginendblock.rb: test for above.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@43685 b2dd03c8-39d4-4d8f-98ff-823fe69b080e